# gameofgnomes.blog

./: .gitignore  AGENTS.md  README.md  soupault.toml
.github/actions/setup-imagemagick/: action.yml
.github/actions/setup-pandoc/: action.yml
.github/actions/setup-soupault/: action.yml
.github/workflows/: build.yml  validate-live.yml  validate.yml
hooks/: post-build.lua  pre-parse.lua
plugins/: atom.lua  goatcounter.lua  og-image.lua  source-link.lua
scripts/: build-share-images.sh  changed-page-urls  git-last-modified  share-image.sh
scripts/share-images/: Cargo.toml
scripts/share-images/src/: main.rs
site/: adventure-hooks.adoc  adventure-locations.adoc  creating-city-campaigns.adoc  creating-city-campaigns.md  encounter-design.adoc  encounter-design.md  encounter-dice.adoc  index.adoc  index.md  multiple-entrance.adoc  session-prep.adoc  session-prep.md  sink-sprawl-rise.adoc  tempo-and-cadence.adoc
site/css/: styles.css
templates/: main.html
